feat: add support for multiple SETs and checkpoints in rekor
This code is mostly taken from the securitycon and communityday branches, with some tidying up
