# pkg/api/public_key.go
@@ -34,6 +34,16 @@ func GetPublicKeyHandler(params pubkey.GetPublicKeyParams) middleware.Responder 
 	return pubkey.NewGetPublicKeyOK().WithPayload(pk)
 }
 
+// GetPublicKeysHandler returns all public keys associated with the given tree ID.
+func GetPublicKeysHandler(params pubkey.GetPublicKeysParams) middleware.Responder {
+	treeID := conv.Value(params.TreeID)
+	pks, err := api.logRanges.PublicKeys(treeID)
+	if err != nil {
+		return handleRekorAPIError(params, http.StatusBadRequest, err, "")
+	}
+	return pubkey.NewGetPublicKeysOK().WithPayload(pks)
+}
+
 // handlers for APIs that may be disabled in a given instance
 
 func GetPublicKeyNotImplementedHandler(_ pubkey.GetPublicKeyParams) middleware.Responder {
@@ -43,4 +53,13 @@ func GetPublicKeyNotImplementedHandler(_ pubkey.GetPublicKeyParams) middleware.R
 	}
 
 	return pubkey.NewGetPublicKeyDefault(http.StatusNotImplemented).WithPayload(err)
+}
+
+func GetPublicKeysNotImplementedHandler(_ pubkey.GetPublicKeysParams) middleware.Responder {
+	err := &models.Error{
+		Code:    http.StatusNotImplemented,
+		Message: "Get Public Keys API not enabled in this Rekor instance",
+	}
+
+	return pubkey.NewGetPublicKeysDefault(http.StatusNotImplemented).WithPayload(err)
 }
